2010-11-18  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        GraphicsContext3D::reshape is clearing using current clear color instead of transparent
        https://bugs.webkit.org/show_bug.cgi?id=44064

        * src/WebGraphicsContext3DDefaultImpl.cpp:
        (WebKit::WebGraphicsContext3DDefaultImpl::reshape): Use 0 as clear values.
2010-11-18  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        GraphicsContext3D::reshape is clearing using current clear color instead of transparent
        https://bugs.webkit.org/show_bug.cgi?id=44064

        * platform/graphics/gpu/DrawingBuffer.cpp:
        (WebCore::DrawingBuffer::reset): Use 0 as clear values.
        * platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:
        (WebCore::GraphicsContext3D::reshape): Ditto.
2010-11-18  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        GraphicsContext3D::reshape is clearing using current clear color instead of transparent
        https://bugs.webkit.org/show_bug.cgi?id=44064

        * fast/canvas/webgl/renderbuffer-initialization-expected.txt:
        * fast/canvas/webgl/renderbuffer-initialization.html: Test that o is used as the clear values instead of the current gl clear values.


Canonical link: https://commits.webkit.org/62893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72431 268f45cc-cd09-0410-ab3c-d52691b4dbfc